# Gaia

./: .gitignore  CMakeLists.txt  GenerateHLSLFlags.cpp  README.md  Setup.bat  Setup_No_ImGui.bat
Truncated/: Box.hpp  Cylinder.cpp  Pyramid.hpp  TestObject.cpp  TestObject.hpp  Tex2DBox.hpp
Truncated/hlsl/: PSPixelLightVColor.hlsl  VSPixelLightVColor.hlsl
Truncated/hlsl/FaceColor/: VSFaceColor.hlsl
Truncated/hlsl/Texture2D/: PSTexture2D.hlsl  RS_VS_CBuff_Tex2D.hlsl
Truncated/hlsl/VertexColor/: PSVertexColor.hlsl  RS_VS_CBuff.hlsl
Truncated/hlsl/VertexLight/: RSVertexLight.hlsl
includes/: App.hpp
includes/Exceptions/: Exception.hpp  GraphicsExceptions.hpp  WindowExceptions.hpp
includes/Graphics/: BindableProcessor.hpp  BufferMan.hpp  Camera.hpp  CommandList.hpp  CommandQueue.hpp  DebugInfoManager.hpp  DxgiInfoManager.hpp  Graphics.hpp  GraphicsExtractor.hpp  HeapMan.hpp  ImGuiImpl.hpp  ImGuiMan.hpp  Light.hpp  PreCompiled.hpp  ResourceView.hpp  TestObject.hpp  Texture.hpp  Vertices.hpp
includes/Graphics/Bindable/: BindAll.hpp  Bindable.hpp  BindableAll.hpp  BindableCodex.hpp  (+17 more)
includes/ImGui/: ImGuiAll.hpp  imgui_impl_dx12.h
includes/Macros/: GraphicsThrowMacros.hpp
includes/Test/: Box.hpp
includes/Utility/: CleanWin.hpp  GDIPlusManager.hpp  Surface.hpp  Timer.hpp  Transform.hpp  Utilities.hpp
includes/Window/: Keyboard.hpp  Mouse.hpp  Window.hpp
resources/: resource.rc
src/: App.cpp  DxgiInfoManager.cpp  Graphics.cpp  Keyboard.cpp  Timer.cpp  Window.cpp  Xception.cpp  main.cpp
src/Exceptions/: Exception.cpp  GraphicsExceptions.cpp  WindowExceptions.cpp
src/Graphics/: BindableProcessor.cpp  BufferMan.cpp  Camera.cpp  CommandList.cpp  CommandQueue.cpp  DebugInfoManager.cpp  DxgiInfoManager.cpp  Graphics.cpp  GraphicsExtractor.cpp  HeapMan.cpp  ImGuiImpl.cpp  ImGuiMan.cpp  Light.cpp  PreCompiled.cpp  ResourceView.cpp  TestObject.cpp  Texture.cpp
src/ImGui/: imgui_impl_dx12.cpp
src/Test/: Box.cpp
src/Utility/: GDIPlusManager.cpp  Surface.cpp  Transform.cpp  Utilities.cpp
src/Window/: Keyboard.cpp  Mouse.cpp  Window.cpp
src/includes/: App.hpp  DxgiInfoManager.hpp  Graphics.hpp  Window.hpp  Xception.hpp
src/shaders/: CMakeLists.txt  PixelShader.hlsl  VertexShader.hlsl
src/shaders/FaceColor/: PSFaceColor.hlsl  RS_VS_PS_CBuff.hlsl  VSFaceColor.hlsl
src/shaders/Pixel/: PColorFromVS.hlsl  PConstantFaceColors.hlsl  PTexture.hlsl  TPixelShader.hlsl
src/shaders/PixelLight/: PSPixelLight.hlsl  PSPixelLightSpec.hlsl  RSPixelLight.hlsl  RSPixelLightSpec.hlsl  VSPixelLight.hlsl
src/shaders/PixelLight/WithDiffuseOnly/: PSPixelLight.hlsl
src/shaders/PixelLight/WithNormalMapOnly/: PSPixelLightNorm.hlsl  RSPixelLightNorm.hlsl  VSPixelLightNorm.hlsl
src/shaders/PixelLight/WithOnlySpecular/: PSPixelLightSpec.hlsl
src/shaders/PixelLight/WithSpecularAndNormalMap/: PSPixelLightSpecNorm.hlsl  RSPixelLightSpecNorm.hlsl
src/shaders/SolidColor/: PSSolidColor.hlsl  PSSolidColorNormal.hlsl  RSSolidColor.hlsl  RSSolidColorNormal.hlsl  VSSolidColor.hlsl  VSSolidColorNormal.hlsl
src/shaders/Test/: PSTest.hlsl  RSTest.hlsl  VSTest.hlsl
src/shaders/Texture/: PSPixelLight.hlsl  PSPixelLightNorm.hlsl  PSPixelLightSpec.hlsl  PSPixelLightSpecNorm.hlsl  RSPixelLight.hlsl  RSPixelLightNorm.hlsl  RSPixelLightSpec.hlsl  RSPixelLightSpecNorm.hlsl  VSPixelLight.hlsl  VSPixelLightNorm.hlsl
src/shaders/Texture2D/: PSPixelLightTex2D.hlsl  RSPixelLightTex2D.hlsl  VSPixelLightTex2D.hlsl  VSTexture2D.hlsl
src/shaders/Vertex/: TVertexShader.hlsl  VNothingExtra.hlsl  VTexture.hlsl  VWithColor.hlsl
src/shaders/VertexColor/: RS_VS_CBuff.hlsl  VSVertexColor.hlsl
src/shaders/VertexLight/: PSVertexLight.hlsl  RSVertexLight.hlsl  VSVertexLight.hlsl
src/shaders/include/: CommonHeader.hlsli
src/shaders/precompiled/Debug/: PixelShader.cso  VertexShader.cso
(+75 files in other folders)
